# narrow_rl

./: README.md  data_show.py  output.txt
model/100/q_eval/: saved_model.pb
model/100/q_next/: keras_metadata.pb  saved_model.pb
model/1000/q_eval/: saved_model.pb
model/1000/q_next/: saved_model.pb
model/1500/q_eval/: saved_model.pb
model/1500/q_next/: saved_model.pb
model/200/q_eval/: keras_metadata.pb  saved_model.pb
model/200/q_next/: saved_model.pb
model/2000/q_eval/: saved_model.pb
model/2000/q_next/: saved_model.pb
model/2500/q_eval/: saved_model.pb
model/2500/q_next/: saved_model.pb
model/3000/q_eval/: saved_model.pb
model_ddpg/output0/: actor.index  critic.index  target_actor.data-00000-of-00001  target_actor.index  target_critic.data-00000-of-00001  target_critic.index
src/rl_ros/: CMakeLists.txt  package.xml
src/sunny_gazebo/: CMakeLists.txt  package.xml
src/sunny_gazebo/launch/: sunny_simple.launch  world_edit.launch
src/sunny_gazebo/meshes/: front_wheel_link.STL  left_wheel_link.STL  right_wheel_link.STL  universal_wheel_link.STL
src/sunny_gazebo/teleop/: teleop_key
src/sunny_gazebo/urdf/: robot1.gazebo.xacro  robot1.urdf.xacro  sunny_gazebo.urdf  sunny_model.csv  sunny_model.gazebo.xacro  sunny_model.urdf  sunny_model.urdf.xacro
src/sunny_gazebo/worlds/: agv_complex1.world  agv_scene_slam1.world  complex1.world  mark_big.world  mark_big_car.world  simplest.world  sunny_agv.world  sunny_complex.world  sunny_sim.world  sunny_simple.world  sunny_slam.world  sunny_test.world  sunny_work_station.world  wjh_world.world
(+39 files in other folders)
