<package format="2">
  <name>sunny_gazebo</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for sunny_gazebo</p>
    <p>This package contains configuration data, 3D models and launch files
for sunny robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <architecture_independent />
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/models"/>
  </export>
</package>
